--- a/package.json
+++ b/package.json
@@ -12,22 +12,28 @@
     "url": "git+https://github.com/sghosh1810/url-shortner.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shounak Ghosh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sghosh1810/url-shortner/issues"
   },
   "homepage": "https://github.com/sghosh1810/url-shortner#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
     "helmet": "^3.23.3",
-    "monk": "^7.3.0",
+    "mongoose": "^5.9.22",
     "morgan": "^1.10.0",
     "nanoid": "^3.1.10",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "yup": "^0.29.1"
   }
 }
