--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "unirest": "^0.6.0",
     "yup": "^0.29.1"
   }
 }
