--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "express-session": "^1.17.1",
     "helmet": "^3.23.3",
     "mongoose": "^5.9.22",
     "morgan": "^1.10.0",
