--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.4.0",
+    "disco-oauth": "^4.2.7",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "helmet": "^3.23.3",
     "mongoose": "^5.9.22",
-    "morgan": "^1.10.0",
     "nanoid": "^3.1.10",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
