--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DATABASE_URI=
-MONGODB URL - I reccomend using https://clevercloud.com for it
+MONGODB URL - Can be created from many sites.
 HOST=
 URL of your site
 DISCORD_ID=
